apply plugin: 'com.android.application'
apply plugin: 'checkstyle'

android {
    compileSdk 35
    buildFeatures {
        viewBinding true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    defaultConfig {
        applicationId "com.nicue.onetwo"
        minSdkVersion 21
        targetSdkVersion 35
        versionCode 26
        versionName "1.7.1"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    testOptions {
        unitTests.includeAndroidResources = true
    }
    lint {
        abortOnError true
        checkDependencies true
        htmlReport true
        textReport true
        xmlReport true
    }
    namespace 'com.nicue.onetwo'
}

checkstyle {
    toolVersion = '13.4.2'
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
    ignoreFailures = false
    showViolations = true
}

tasks.register('checkstyle', Checkstyle) {
    group = 'verification'
    description = 'Runs Checkstyle against Java source files.'
    source 'src/main/java', 'src/test/java', 'src/androidTest/java'
    include '**/*.java'
    exclude '**/build/**'
    classpath = files()

    reports {
        xml.required = true
        html.required = true
    }
}

tasks.named('check') {
    dependsOn rootProject.tasks.named('spotlessCheck')
    dependsOn tasks.named('checkstyle')
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
    implementation "androidx.preference:preference:$rootProject.preferenceVersion"
    implementation "androidx.lifecycle:lifecycle-livedata:$rootProject.lifecycleVersion"
    implementation "androidx.lifecycle:lifecycle-viewmodel:$rootProject.lifecycleVersion"
    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$rootProject.lifecycleVersion"
    implementation "androidx.navigation:navigation-fragment:$rootProject.navVersion"
    implementation "androidx.navigation:navigation-ui:$rootProject.navVersion"
    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
    androidTestImplementation("androidx.test.espresso:espresso-core:$rootProject.espressoVersion", {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    implementation "androidx.appcompat:appcompat:$rootProject.appcompatVersion"
    implementation "androidx.cardview:cardview:$rootProject.cardviewVersion"
    implementation "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
    implementation "com.google.android.material:material:$rootProject.materialVersion"
    debugImplementation "androidx.fragment:fragment-testing:$rootProject.fragmentTestingVersion"
    testImplementation "androidx.arch.core:core-testing:$rootProject.archCoreTestingVersion"
    testImplementation "androidx.room:room-testing:$rootProject.roomVersion"
    testImplementation "androidx.test:core:$rootProject.testCoreVersion"
    testImplementation "junit:junit:$rootProject.junitVersion"
    testImplementation "org.robolectric:robolectric:$rootProject.robolectricVersion"
}
